[package]
name = "rhai"
version = "0.9.0"
authors = ["Jonathan Turner", "Lukáš Hozda"]
description = "Embedded scripting for Rust"
homepage = "https://github.com/jonathandturner/rhai"
repository = "https://github.com/jonathandturner/rhai"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "scripts/*.rhai",
    "Cargo.toml"
]

[dependencies]
libm = "0.1.3"

[features]
default = ["std"]
debug_msgs = []
std = []
